--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@
             data-bs-toggle="modal"
             data-bs-target="#Admission"
           >
-            Click Hear
+            Click Here
           </button>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
