--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 >Academic</a
               >
               <a href="#Teacher" class="nav-item nav-link js-scroll-trigger"
-                >Adminstor</a
+                >Administrator</a
               >
-              <a href="#Testimonial" class="nav-item nav-link js-scroll-trigger"
-                >Testonomies</a
+              <a href="#Testimonials" class="nav-item nav-link js-scroll-trigger"
+                >Testimonials</a
               >
               <a href="#Gallery" class="nav-item nav-link js-scroll-trigger"
                 >Gallery</a
@@ -254,15 +254,7 @@
           </div>
           <div class="col-lg-7">
             <p>
-              GBS is a RBSE-affiliated institution.It has been at the forefront
-              of quality education since its inception in 2002. we believe that
-              the fundamental purpose of education is to encourage the children
-              to bring about a positive change in their behavior as they ascend
-              the ladder of learning and knowledge. The School offers an
-              innovative and refreshing new approach to an education that
-              combines contemporary learning techniques and principles with a
-              balance of intellectual growth and spiritual and personal
-              well-being.
+              GBS is a RBSE-affiliated institution. It has been at the forefront of quality education since its inception in 2002. we believe that the fundamental purpose of education is to encourage the children to bring about a positive change in their behavior as they ascend the ladder of learning and knowledge. The school offers an innovative and refreshing new approach to an education that combines contemporary learning techniques and principles with a balance of intellectual growth and spiritual and personal well-being.
             </p>
             <div class="row pt-2 pb-4 mt-4">
               <div class="col-lg-6 col-md-12">
@@ -894,7 +886,7 @@
     </div>
     <!-- Team End -->
     <!-- Testimonial Start -->
-    <div class="container-fluid py-5" id="Testimonial" data-aos="fade-up">
+    <div class="container-fluid py-5" id="Testimonials" data-aos="fade-up">
       <div class="container p-0">
         <div class="text-center pb-2">
           <p class="section-title pe-5">
@@ -1503,8 +1495,8 @@
             <a class="text-white mb-2 text-decoration-none" href="#Teacher"
               ><i class="bi bi-chevron-right me-2"></i>Our Teachers</a
             >
-            <a class="text-white mb-2 text-decoration-none" href="#Testimonial"
-              ><i class="bi bi-chevron-right me-2"></i>Testonomies</a
+            <a class="text-white mb-2 text-decoration-none" href="#Testimonials"
+              ><i class="bi bi-chevron-right me-2"></i>Testimonials</a
             >
             <a class="text-white mb-2 text-decoration-none" href="#Gallery"
               ><i class="bi bi-chevron-right me-2"></i>Gallery</a
