--- a/index.html
+++ b/index.html
@@ -1450,21 +1450,21 @@
         <div class="col-lg-3 col-md-6 mb-5">
           <h3 class="text-primary mb-4">Get In Touch</h3>
           <div class="d-flex">
-            <h4 class="bi bi-geo-alt text-primary"></h4>
+            <h4 class="bi bi-geo-alt text-primary me-3"></h4>
             <div class="pe-3">
               <h5 class="text-white">Address</h5>
               <p>Near Sonala Behru, Jaitaran Chowki,Merta City</p>
             </div>
           </div>
           <div class="d-flex">
-            <h4 class="bi bi-envelope text-primary"></h4>
+            <h4 class="bi bi-envelope text-primary me-3"></h4>
             <div class="pe-3">
               <h5 class="text-white">Email</h5>
               <p>gbrilliantyoga@gmail.com</p>
             </div>
           </div>
           <div class="d-flex">
-            <h4 class="bi bi-phone text-primary"></h4>
+            <h4 class="bi bi-phone text-primary me-3"></h4>
             <div class="pe-3">
               <h5 class="text-white">Phone</h5>
               <p>9460110507,9079126416</p>
